<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeNewPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/custom_action_bar"
            android:id="@+id/toolbarLayout"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:src="@drawable/ic_change_password"
                    android:padding="5dp"
                    android:layout_marginTop="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Mật khẩu cũ"
                        android:textSize="19dp"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvErrorCurrentPass"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:text="Mật khẩu cũ"
                        android:textSize="19dp"
                        android:gravity="right"
                        android:textColor="@color/Red"
                        android:visibility="gone"/>

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="30dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etCurrentPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="23dp"
                        android:gravity="center"
                        android:hint="@string/Enter_current_password"
                        android:drawableLeft="@drawable/ic_action_password"
                        android:inputType="numberPassword"
                        android:padding="5dp"
                        android:maxLength="6"
                        android:background="@drawable/edit_round_textview"/>

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Mật khẩu mới"
                        android:textSize="19dp"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvErrorNewPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:text="Mật khẩu cũ"
                        android:textSize="19dp"
                        android:gravity="right"
                        android:textColor="@color/Red"
                        android:visibility="gone"/>

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="30dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etNewPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="23dp"
                        android:hint="@string/Enter_new_password"
                        android:gravity="center"
                        android:drawableLeft="@drawable/ic_action_password"
                        android:inputType="numberPassword"
                        android:padding="5dp"
                        android:maxLength="6"
                        android:background="@drawable/edit_round_textview"/>


                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Xác nhận mật khẩu mới"
                        android:textSize="19dp"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvErrorConfirmNewPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:textSize="19dp"
                        android:gravity="right"
                        android:textColor="@color/Red"
                        android:visibility="visible"/>

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="30dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="23dp"
                        android:hint="@string/Enter_new_password_again"
                        android:gravity="center"
                        android:drawableLeft="@drawable/ic_action_password"
                        android:inputType="numberPassword"
                        android:padding="5dp"
                        android:maxLength="6"
                        android:background="@drawable/edit_round_textview"/>


                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center_horizontal">

            <Button
                android:id="@+id/btnUpdatePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Đổi"
                android:textSize="18dp"
                android:paddingHorizontal="50dp"
                android:layout_marginBottom="10dp"
                style="@style/Widget.AppCompat.Button"
                android:background="@drawable/background_button"
                android:paddingVertical="5dp"
                android:onClick="ChangePasswordEvent"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>